# aksarc-foundrylocal-aiops

./: .gitignore  .pre-commit-config.yaml  AKS_ARC_ENHANCEMENTS.md  AKS_ARC_FEATURES.md  AKS_ARC_IMPLEMENTATION_SUMMARY.md  FOUNDRY_TROUBLESHOOTING.md  FOUNDRY_VALUE_RECOMMENDATIONS.md  K8s AI Assistant.docx  Makefile  PROJECT_OVERVIEW.md  README-SERVICE.md  README.md  REDESIGN_SUMMARY.md  REFACTORING_COMPLETE.md  REPO_CLEANUP_SUMMARY.md  SECURITY_AUDIT.md  SECURITY_CONNECTIVITY_PLAN.md  SIMPLE_README.md  START.md  STARTING_MODELS.md  TESTING_VALIDATION.md  TEST_RESULTS.md  TODO.md  TODO_TOMORROW.md  UI_CONTROLS.md  check.ps1  cleanup-repo.ps1  complete-cleanup.ps1  dashboard.html  index.html  modern-theme.css  run.ps1  setup.ps1  start-service.ps1  status-service.ps1  stop-service.ps1  test-interactive.ps1  test_api.ps1  test_diagnostics.html  test_foundry_sdk.py  (+3 more)
.github/workflows/: security-scan.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  routes.py  websocket.py
backend/src/api/v1/: __init__.py  diagnostics.py  reasoning.py  topology.py
backend/src/core/: __init__.py  config.py  exceptions.py  logging.py
backend/src/diagnostics/: runner.py
backend/src/exporters/: mermaid.py  support_bundle.py
backend/src/models/: __init__.py  chat.py  cluster.py  diagnostic_result.py  topology_graph.py
backend/src/reasoning/: loop.py  topology_analyzer.py
backend/src/services/: __init__.py  ai_detector.py  aks_arc_diagnostics.py  context.py  foundry.py  foundry_manager.py  kubernetes.py  network_analyzer.py
backend/tests/: __init__.py
backend/tests/unit/: test_api_basic.py
deploy/systemd/: README.md  aiops.service
docs/: architecture.md  deployment.md  development.md  k3s-setup.md  secure-workflow.md  security.md
docs/development/: AKS_ARC_TESTING.md  DIAGNOSTICS_IMPROVEMENTS.md  FOUNDRY_SDK_INTEGRATION.md  FOUNDRY_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICK_TEST.md  READY_TO_TEST.md  TESTING_GUIDE.md  TOPOLOGY_IMPROVEMENTS_SUMMARY.md  VISUAL_IMPROVEMENTS_GUIDE.md
frontend/: .env.example  .eslintrc.cjs  index.html  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css
scripts/: verify-security.ps1
scripts/runners/: start-simple.ps1  start.bat  start.ps1
tests/: test_api.py  test_enhancements.py  test_improvements.html  test_improvements.py  test_integration.py
